<resources>
    <string name="app_name">Rongo</string>

    <!--- Splash Screen -->
    <string name="btn_splash">会員登録</string>

    <!-- Register Screen -->
    <string name="title_register">会員登録</string>
    <string name="hint_nickname">ロンゴ</string>
    <string name="hint_inviteCode">キャンペーンコード（お持ちの方のみ）</string>
    <string name="terms_privacy">利用規約とプライバシーポリシーに同意する</string>
    <string name="btn_register">登録する</string>
    <string name="change_device">機種変更の方はこちら</string>
    <string name="desc_nickname">ニックネーム</string>
    <string name="warn_nickname">※一度決めたら変更できません</string>
    <string name="exist_nickname">このニックネームは使用できません</string>

    <string name="pass_change_device">機種変更コード</string>
    <string name="login_device_code">ログイン</string>
    <string name="back_login">登録画面に戻る</string>
    <string name="loading"></string>

    <string name="tab_home">ホーム</string>
    <string name="tab_user">会員登録</string>
    <string name="tab_news">お知らせ</string>
    <string name="tab_search">検索</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_title">お知らせ</string>
    <string name="notification">お知らせ</string>
    <string name="news">ニュース</string>
    <string name="title_activity_good_detail">GoodDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="title_activity_purchase">PurchaseActivity</string>


</resources>
