<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_tab_home_active"
        app:showAsAction="ifRoom"
        android:title="@string/tab_home"/>

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_tab_user_outline"
        android:title="@string/tab_user"/>

    <item
        android:id="@+id/navigation_message"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_tab_news_outline"
        android:title="@string/tab_news"/>

    <item
        android:id="@+id/navigation_checkin"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_tab_search_inactive"
        android:title="@string/tab_search"/>

</menu>